[package]
name = "wasm_audio_api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # ← これを追加 (main.rs を不要にする)

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioDestinationNode",
    "OscillatorNode",
    "GainNode",
    "AudioParam"
] }
